# C-UnivLib

./: CMakeLists.txt
include/all/: univmutex.h  univthread.h
include/linux/: univmutex.h  univthread.h
include/windows/: univthread.h
source/linux/: univmutex.c  univthread.c
source/windows/: univthread.c
tests/: CMakeLists.txt  main.c
